        - Style: Secure (can be canceld in combat); Legacy (sorted)
        - Set the grow direction (left, right, up, down)
        - Set auras per row
    - Added Keybinds for "Sort Bag" and "Sort Bank"
    - Added option to show coordinates with 2 digits (click on the coordinats; Thanks to: hatdragon)
    - Added extra mana bar for feral druids in cat form
    - Update locals (zhTW, ptBR)

FIXES
    - Chat window can now be separated and moved to the rightside of the screen
    - Arena prep frames are now displayes correctly


5.2.3

FIXES
    - Mechagnomes should now display the same as base race in hero panel
    

5.2.2

NEW
    - Add Corruption border to the inventory
    - Add option to show target auras on top
    - Add option to move player auras

FIXES
    - Add upgrade warning for higher tier cloak orbs


5.2.1

NEW
    - Add Rajani & Uldum Accord rep graphics

FIXES
    - Fix immersive camera for King Phaoris
    - Add warning to unequip cloak to upgrade instead of throwing an error (temp fix)


5.2.0

NEW
    - Added X and Y offset for tooltip if anchor is set to cursor
    - Update for 8.3
    - Added healthprediction to target, target of target, focus and target of focus frame
    - Added healthprediction to healthglobe
    - Added option to set Actionbar fade per Actionbar (Show always, show in combat, show only on mouse over)


5.1.15

NEW
    - Added aggroborder to partyframes
    - Added option the set the Stancebar to the left or right of the Actionbar
    - Added more Battleground HUD's
    - Enhanced durability icon at hero panel 
    - Added timer to scenarios like Chromie

MISCELLANEOUS
    - Settings: Checkboxes now also toggle if click on the text

FIXES
    - Classpowerbar now changes if spec changed
    - If minimap is on top now all icons on the minimap are accessable


5.1.14

NEW
    - Added possibly to show more then one WQ
    - Added possibly to track WQ's
    - Added new skins

FIXES
    - Fix chatframe moving and resizing error
