@@ -38,6 +38,7 @@ NEW
     - Added Keybinds for "Sort Bag" and "Sort Bank"
     - Added option to show coordinates with 2 digits (click on the coordinats; Thanks to: hatdragon)
     - Added extra mana bar for feral druids in cat form
+    - Added 'Show Debuff', 'Show only dispellable debuffs', 'Show importend raid & instance debuffs' to party and raidframes
     - Update locals (zhTW, ptBR)
 
 FIXES
