@@ -281,12 +281,15 @@ GW_DEFAULT["RAID_CONT_WIDTH"] = 0
 GW_DEFAULT["RAID_CONT_HEIGHT"] = 0
 GW_DEFAULT["RAID_SHOW_DEBUFFS"] = true
 GW_DEFAULT["RAID_ONLY_DISPELL_DEBUFFS"] = false
-GW_DEFAULT["RAID_SHOW_IMPORTEND_RAID_DEBUFF"] = false
+GW_DEFAULT["RAID_SHOW_IMPORTEND_RAID_INSTANCE_DEBUFF"] = false
 GW_DEFAULT["RAID_SORT_BY_ROLE"] = true
 GW_DEFAULT["RAID_AURA_TOOLTIP_IN_COMBAT"] = true
 GW_DEFAULT["RAID_UNIT_HEALTH"] = "NONE"
 
 GW_DEFAULT["PARTY_UNIT_HEALTH"] = "NONE"
+GW_DEFAULT["PARTY_SHOW_DEBUFFS"] = true
+GW_DEFAULT["PARTY_ONLY_DISPELL_DEBUFFS"] = false
+GW_DEFAULT["PARTY_SHOW_IMPORTEND_RAID_INSTANCE_DEBUFF"] = false
 GW_DEFAULT["FADE_GROUP_MANAGE_FRAME"] = false
 
 GW_DEFAULT["AUTO_REPAIR"] = "NONE"
